feat: add decaying alert messages functionality

--- a/index.html
+++ b/index.html
@@ -101,5 +101,8 @@
         </svg>
       </button>
     </div>
+
+    <!-- alert -->
+    <div class="alert-container" data-alert-container></div>
   </body>
 </html>
